force-app/main/default/objects/copado__Team__c/fields/copado__Department__c.field-meta.xml
<CustomField>
    <fullName>copado__Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Core Infrastructure</fullName>
            </value>
            <value>
                <fullName>Data Center Automation</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Matrix</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Network and Systems Platform</fullName>
            </value>
            <value>
                <fullName>Path-To-Production</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Production Support</fullName>
            </value>
            <value>
                <fullName>Productivity</fullName>
            </value>
            <value>
                <fullName>Programmatic UI</fullName>
            </value>
            <value>
                <fullName>R&amp;D App Delivery</fullName>
            </value>
            <value>
                <fullName>Reliability</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Shared Services</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>