force-app/main/default/objects/copado__Team__c/fields/copado__Vision__c.field-meta.xml
<CustomField>
    <fullName>copado__Vision__c</fullName>
    <label>Vision</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>